# cs520_exercise2

./: .coverage  .gitignore  README.md  bcb_hard_problems_5.json  coverage_analysis.md  generate_individual_solutions.py  individual_coverage_results.json  individual_coverage_tables.md  llm_code_agent.py  main.py  pyproject.toml  run_individual_coverage.py  solution.py  solution2.py  solution3.py  test_all_solutions_with_coverage.py  test_individual_solutions.py  test_multi_solutions.py
archive/: llm_code_agent_dspy.py  minimax_m2_free_problem13.py  minimax_m2_free_problem17_2.py  minimax_m2_free_problem17_3.py  setup_problem_folders.py  test_all_problems.py  test_run.sh  test_solution.py  test_solution_12.py  test_solution_12_comprehensive.py  test_solution_4_comprehensive.py
deepseek_cot_solutions/: README.md  __init__.py  solution_1.py  solution_10.py  solution_11.py  solution_12.py  solution_13.py  solution_14.py  solution_2.py  solution_3.py  solution_4.py  solution_5.py  solution_6.py  solution_7.py  solution_8.py  solution_9.py
exercise1_individual_solutions/: solution_02_deepseek_cot.py  solution_02_deepseek_self_planning.py  solution_02_gemini_cot.py  solution_02_gemini_self_planning.py  solution_03_deepseek_self_planning.py  solution_03_gemini_cot.py  solution_03_gemini_self_planning.py  solution_04_deepseek_cot.py  solution_04_deepseek_self_planning.py  solution_04_gemini_self_planning.py  solution_05_deepseek_self_planning.py  solution_06_gemini_self_planning.py  solution_07_deepseek_cot.py  solution_07_gemini_cot.py  solution_08_deepseek_self_planning.py  (+8 more)
(+51 files in other folders)
